--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.23",
     "gatsby-plugin-sitemap": "^2.1.0",
+    "gatsby-plugin-stripe": "^1.2.1",
     "gatsby-source-prismic": "^2.2.0",
+    "gatsby-source-stripe": "^3.0.1",
     "gatsby-transformer-sharp": "^2.1.15",
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
