--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
+    "react-input-autosize": "^2.2.1",
     "react-typography": "^0.16.18",
     "smoothscroll": "^0.4.0",
     "smoothscroll-polyfill": "^0.4.3",
