--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
     "react-input-autosize": "^2.2.1",
+    "react-tilt": "^0.1.4",
     "react-typography": "^0.16.18",
+    "seedrandom": "^3.0.1",
     "smoothscroll": "^0.4.0",
     "smoothscroll-polyfill": "^0.4.3",
     "typeface-lora": "^0.0.72",
