--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
     "react-input-autosize": "^2.2.1",
+    "react-slick": "0.22.3",
     "react-tilt": "^0.1.4",
     "react-typography": "^0.16.18",
     "seedrandom": "^3.0.1",
