--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "typeface-montserrat": "^0.0.54",
     "typeface-source-sans-pro": "^0.0.54",
     "typography": "^0.16.18",
+    "use-debounce": "^2.1.0",
     "viewport-units-buggyfill": "^0.6.2",
     "yarn": "^1.16.0"
   },
