--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^2.1.19",
     "gatsby-image": "^2.0.30",
     "gatsby-plugin-canonical-urls": "^2.0.12",
+    "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-google-analytics": "^2.0.19",
     "gatsby-plugin-lodash": "^3.0.4",
     "gatsby-plugin-mailchimp": "^5.1.0",
