--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby-source-stripe": "^3.0.1",
     "gatsby-transformer-sharp": "^2.1.15",
     "lodash": "^4.17.11",
+    "lottie-web": "^5.5.6",
     "node-sass": "^4.12.0",
     "prismic-reactjs": "^0.3.2",
     "prismjs": "^1.15.0",
