--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "react-helmet": "^5.2.0",
     "react-input-autosize": "^2.2.1",
     "react-lottie": "^1.2.3",
-    "react-on-visible": "^1.6.0",
     "react-slick": "^0.24.0",
     "react-tilt": "^0.1.4",
     "react-typography": "^0.16.18",
+    "react-visibility-sensor": "^5.1.0",
     "rellax": "^1.10.0",
     "seedrandom": "^3.0.1",
     "smoothscroll": "^0.4.0",
