--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-helmet": "^5.2.0",
     "react-input-autosize": "^2.2.1",
     "react-lottie": "^1.2.3",
+    "react-responsive": "8.0.0-beta.0",
     "react-slick": "^0.24.0",
     "react-tilt": "^0.1.4",
     "react-typography": "^0.16.18",
