--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-input-autosize": "^2.2.1",
     "react-intersection-observer": "^8.24.1",
     "react-lottie": "^1.2.3",
-    "react-responsive": "8.0.0-beta.0",
+    "react-responsive": "^8.0.0-beta.1",
     "react-slick": "^0.24.0",
     "react-tilt": "^0.1.4",
     "react-typography": "^0.16.18",
