--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@reach/skip-nav": "^0.1.2",
+    "@rehooks/window-size": "^1.0.2",
     "add": "^2.0.6",
     "gatsby": "^2.1.19",
     "gatsby-image": "^2.0.30",
