--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.7.0",
     "react": "^16.8.3",
+    "react-css-collapse": "^3.6.0",
     "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
     "react-input-autosize": "^2.2.1",
