--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lodash": "^4.17.11",
     "lottie-web": "^5.5.6",
     "node-sass": "^4.12.0",
+    "plyr": "^3.5.6",
     "prismic-reactjs": "^0.3.2",
     "prismjs": "^1.15.0",
     "prop-types": "^15.7.2",
