--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-lottie": "^1.2.3",
     "react-responsive": "^8.0.0-beta.1",
     "react-slick": "^0.24.0",
+    "react-spring": "^8.0.27",
     "react-tilt": "^0.1.4",
     "react-typography": "^0.16.18",
     "rellax": "^1.10.0",
