--- a/.eslintrc
+++ b/.eslintrc
@@ -57,6 +57,7 @@
     "react/forbid-prop-types": 0,
     "react/prop-types": 0,
     "react/no-unescaped-entities": 0,
+    "react/no-array-index-key": 0,
     "jsx-a11y/accessible-emoji": 0,
     "react/no-multi-comp": 0,
     "react/jsx-filename-extension": [
