--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-manifest": "^2.0.20",
     "gatsby-plugin-netlify": "^2.0.11",
     "gatsby-plugin-react-helmet": "^3.0.7",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-robots-txt": "^1.4.0",
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.23",
